[gd_scene load_steps=14 format=3 uid="uid://bpwj37ull83l6"]

[ext_resource type="Script" path="res://Characters/Player.gd" id="1_ig7bu"]
[ext_resource type="AudioStream" uid="uid://c0kt70kam2513" path="res://Assets/Sounds/Health.mp3" id="2_n5h47"]
[ext_resource type="Texture2D" uid="uid://dq801ph8k2cac" path="res://Assets/Player.png" id="2_rgio8"]
[ext_resource type="Script" path="res://Shooting/Gun.gd" id="3_og751"]
[ext_resource type="PackedScene" uid="uid://ywlqev63wvru" path="res://Shooting/Projectile.tscn" id="4_8lhmt"]
[ext_resource type="PackedScene" uid="uid://ggny5qoupvbc" path="res://Shooting/Bomb.tscn" id="5_jm5wr"]
[ext_resource type="AudioStream" uid="uid://cxtb5o133f6he" path="res://Assets/Sounds/Bomb.mp3" id="6_2njs6"]
[ext_resource type="Texture2D" uid="uid://d3f5kd5vuk06e" path="res://Assets/Gun.png" id="6_biej7"]
[ext_resource type="AudioStream" uid="uid://b5h0y6n0g17vv" path="res://Assets/Sounds/Gun.mp3" id="8_606f3"]
[ext_resource type="AudioStream" uid="uid://d3mivqkc2unma" path="res://Assets/Sounds/Charger.mp3" id="10_0fie8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jj0c7"]
size = Vector2(22, 22)

[sub_resource type="GDScript" id="GDScript_33il7"]
script/source = "extends CollisionShape2D

var sprite : Sprite2D


func _ready():
	sprite = get_node(\"../Sprite\")
	

func _process(delta):
	rotation = sprite.rotation
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12v5x"]
size = Vector2(22, 2)

[node name="Player" type="CharacterBody2D"]
collision_mask = 128
script = ExtResource("1_ig7bu")

[node name="HealthSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_n5h47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jj0c7")
script = SubResource("GDScript_33il7")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_rgio8")

[node name="Gun" type="Node2D" parent="."]
rotation = -6.28319
script = ExtResource("3_og751")
projectile = ExtResource("4_8lhmt")
bomb = ExtResource("5_jm5wr")

[node name="BombSound" type="AudioStreamPlayer" parent="Gun"]
stream = ExtResource("6_2njs6")

[node name="ProjectileSound" type="AudioStreamPlayer" parent="Gun"]
stream = ExtResource("8_606f3")

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
texture = ExtResource("6_biej7")

[node name="Charger" type="AudioStreamPlayer2D" parent="Gun"]
stream = ExtResource("10_0fie8")

[node name="Area2D" type="Area2D" parent="Gun"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gun/Area2D"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_12v5x")

[connection signal="area_entered" from="Gun/Area2D" to="Gun" method="_on_area_2d_area_entered"]
